[package]
name = "promql-rs"
version = "0.1.0"
authors = ["dtynn <dtynn@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pest = "2.0"
pest_derive = "2.0"

[dependencies.lexical-core]
version = "0.7"
features = ["format"]
