[package]
name = "promql-rs"
version = "0.1.0"
authors = ["dtynn <dtynn@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lrlex = "0.10"
lrpar = "0.10"
cfgrammar = "0.10"

[build-dependencies]
lrlex = "0.10"
lrpar = "0.10"
cfgrammar = "0.10"
